environments/prod/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      containers:
        - name: todo
          image: 139080726045.dkr.ecr.us-east-1.amazonaws.com/gitops:dca6dca7bd43cdb61007b275a2097dd56e3bf171
