environments/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  tls:
  - secretName: todo-tls-secret
  rules:
  - host: prod.todo.com
    http:
      paths:
      - pathType: ImplementationSpecific
        backend:
          service:
            name: todo-service
            port:
              number: 8000
